update prices component. No reload if card is the same